--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
     letter-spacing: 0.2rem;
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   }
+
   .title span {
     display: block;
     font-size: 0.8rem;
@@ -34,6 +35,10 @@
     transition: all 0.5s ease;
     transform-origin: top-left;
   }
+  .task-list li.done {
+    text-decoration: line-through;
+}
+
   .fall {
     transform: rotate(10deg);
     opacity: 0;
